--- a/assets/css/beautifuljekyll (copy).css
+++ b/assets/css/beautifuljekyll (copy).css
@@ -1,3 +1,7 @@
+---
+layout: null
+---
+
 @import url("pygment_highlights.css");
 
 /* --- General --- */
@@ -9,10 +13,13 @@ html {
 body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 1.125rem;
-  color: #404040;
+  color: {{ site.text-col | default: "#404040" }};
   position: relative;
-  background-color: #FFFFFF;
-  
+  background-color: {{ site.page-col | default: "#FFFFFF" }};
+  {% if site.page-img %}
+  background-image: url({{ site.page-img | relative_url }});
+  background-attachment: fixed;
+  {% endif %}
   overflow-wrap: break-word;
 }
 p {
@@ -40,11 +47,11 @@ h1, h2, h3, h4 {
   margin-top: 1.25rem;
 }
 a {
-  color: #008AFF;
+  color: {{ site.link-col | default: "#008AFF" }};
 }
 a:hover,
 a:focus {
-  color: #0085A1;
+  color: {{ site.hover-col | default: "#0085A1" }};
 }
 blockquote {
   color: #808080;
@@ -76,12 +83,12 @@ hr.small {
 ::-moz-selection {
   color: #fff;
   text-shadow: none;
-  background-color: #0085A1;
+  background-color: {{ site.hover-col | default: "#0085A1" }};
 }
 ::selection {
   color: #fff;
   text-shadow: none;
-  background-color: #0085A1;
+  background-color: {{ site.hover-col | default: "#0085A1" }};
 }
 img::selection {
   color: #fff;
@@ -116,10 +123,13 @@ img {
 /* --- Navbar --- */
 
 .navbar-custom {
-  background-color: #EAEAEA;
-  border-bottom: 1px solid #DDDDDD;
+  background-color: {{ site.navbar-col | default: "#EAEAEA" }};
+  border-bottom: 1px solid {{ site.navbar-border-col | default: "#DDDDDD" }};
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  
+  {% if site.navbar-img %}
+    background-image: url({{ site.navbar-img | relative_url }});
+    background-attachment: fixed;
+  {% endif %}
   -webkit-transition: padding .5s ease-in-out;
   -moz-transition: padding .5s ease-in-out;
   transition: padding .5s ease-in-out;
@@ -181,7 +191,7 @@ img {
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-nav .nav-link {
   font-weight: 800;
-  color: #404040;
+  color: {{ site.navbar-text-col | default: "#404040" }};
 }
 
 .navbar-toggler {
@@ -241,22 +251,24 @@ img {
   font-size: 1em;
   border: 0;
   padding: 0;
-  
+  {% if site.navbar-var-length %}
+  min-width: 100%;
+  {% else %}
   min-width: 0;
   width: 100%;
   word-break: break-word;
-  
+  {% endif %}
 }
 
 .navbar-custom .nav-item.dropdown .dropdown-menu .dropdown-item {
   padding: 0.625rem;
-  background-color: #EAEAEA;
+  background-color: {{ site.navbar-col | default: "#EAEAEA" }};
   text-decoration: none !important;
   font-weight: normal;
-  color: #404040;
-  
+  color: {{ site.navbar-text-col | default: "#404040" }};
+  {% unless site.navbar-var-length %}
   white-space: normal;
-  
+  {% endunless %}
 }
 
 @media (min-width: 1200px) {
@@ -266,7 +278,7 @@ img {
 
   .navbar-custom .nav-item.dropdown .dropdown-menu .dropdown-item {
     padding-left: 0.625rem;
-    border: 1px solid #DDDDDD;
+    border: 1px solid {{ site.navbar-border-col | default: "#DDDDDD" }};
     border-width: 0 1px 1px;
   }
 
@@ -277,7 +289,7 @@ img {
 
 @media (max-width: 1199px) {
   .navbar-custom .navbar-collapse {
-    border-top: 1px solid #DDDDDD;
+    border-top: 1px solid {{ site.navbar-border-col | default: "#DDDDDD" }};
     margin: 0 -1rem;
   }
 
@@ -303,7 +315,7 @@ img {
 .navbar-custom .navbar-nav .nav-link:focus,
 .navbar-custom .navbar-nav .dropdown-menu .dropdown-item:hover,
 .navbar-custom .navbar-nav .dropdown-menu .dropdown-item:focus {
-  color: #0085A1;
+  color: {{ site.hover-col | default: "#0085A1" }};
 }
 
 .navbar-custom .avatar-container {
@@ -326,18 +338,18 @@ img {
 .navbar-custom .avatar-container .avatar-img-border {
   width: 100%;
   margin-left: -50%;
-  
+  {% unless site.round-avatar == false %}
     border-radius: 50%;
     box-shadow: 0 0 0.5rem rgba(0, 0, 0, .8);
     -webkit-box-shadow: 0 0 0.3125rem rgba(0, 0, 0, .8);
     -moz-box-shadow: 0 0 0.5rem rgba(0, 0, 0, .8);
-  
+  {% endunless %}
 }
 .navbar-custom .avatar-container .avatar-img {
   width: 100%;
-  
+  {% unless site.round-avatar == false %}
     border-radius: 50%;
-  
+  {% endunless %}
   display: block;
 }
 
@@ -353,11 +365,11 @@ img {
 
   .navbar-custom.top-nav-regular .avatar-container .avatar-img-border {
     width: 100%;
-    
+    {% unless site.round-avatar == false %}
     box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
     -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
     -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
-    
+    {% endunless %}
   }
 
   .navbar-custom.top-nav-regular .avatar-container .avatar-img {
@@ -372,21 +384,24 @@ footer {
   border-top: 1px #EAEAEA solid;
   margin-top: 3.125rem;
   font-size: 0.875rem;
-  background-color: #EAEAEA;
-  
+  background-color: {{ site.footer-col | default: "#EAEAEA" }};
+  {% if site.footer-img %}
+    background-image: url({{ site.footer-img | relative_url }});
+    background-attachment: fixed;
+  {% endif %}
 }
 
 footer p.text-muted {
-  color: #777777 !important;
+  color: {{ site.footer-text-col | default: "#777777" }} !important;
 }
 
 footer a {
-  color: #404040;
+  color: {{ site.footer-link-col | default: "#404040" }};
 }
 
 footer a:hover,
 footer a:focus {
-  color: #0085A1;
+  color: {{ site.footer-hover-col | default: "#0085A1" }};
 }
 
 footer .list-inline {
@@ -450,13 +465,13 @@ footer .footer-custom-content {
 .post-preview a {
   text-decoration: none;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #404040;
+  color: {{ site.text-col | default: "#404040" }};
 }
 
 .post-preview a:focus,
 .post-preview a:hover {
   text-decoration: none;
-  color: #0085A1;
+  color: {{ site.hover-col | default: "#0085A1" }};
 }
 
 .post-preview .post-title {
@@ -544,7 +559,7 @@ footer .footer-custom-content {
 
 @media (min-width: 768px) {
   .post-preview .post-title {
-    font-size: 1.5rem;
+    font-size: 2.25rem;
   }
 }
 
@@ -557,7 +572,7 @@ footer .footer-custom-content {
 }
 
 .blog-tags span {
-  color: #404040;
+  color: {{ site.text-col | default: "#404040" }};
   opacity: 0.8;
 }
 
@@ -566,7 +581,7 @@ footer .footer-custom-content {
 }
 
 .blog-tags a {
-  color: #404040;
+  color: {{ site.text-col | default: "#404040" }};
   text-decoration: none;
   padding: 0 0.3125rem;
   opacity: 0.8;
@@ -576,8 +591,8 @@ footer .footer-custom-content {
 
 .blog-tags a:hover {
   opacity: 1;
-  color: #404040;
-  border-color: #404040;
+  color: {{ site.text-col | default: "#404040" }};
+  border-color: {{ site.text-col | default: "#404040" }};
 }
 
 .post-preview .blog-tags {
@@ -669,7 +684,7 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
 }
 .intro-header .page-heading .page-subheading,
 .intro-header .post-heading .post-subheading {
-  font-size: 1.35rem;
+  font-size: 1.6875rem;
   line-height: 1.1;
   display: block;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -714,7 +729,7 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
     padding: 9.375rem 0;
   }
   .intro-header .page-heading h1 {
-    font-size: 3rem;
+    font-size: 5rem;
   }
   .intro-header .post-heading h1 {
     font-size: 3.125rem;
@@ -797,7 +812,7 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
   padding: 0.625rem 0.3125rem;
   background-color: #FFF;
   border-radius: 0;
-  color: #404040;
+  color: {{ site.text-col | default: "#404040" }};
 }
 @media (min-width: 768px) {
   .pagination .page-item .page-link {
@@ -807,8 +822,8 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
 .pagination .page-item .page-link:hover,
 .pagination .page-item .page-link:focus {
   color: #FFF;
-  border: 1px solid #0085A1;
-  background-color: #0085A1;
+  border: 1px solid {{ site.hover-col | default: "#0085A1" }};
+  background-color: {{ site.hover-col | default: "#0085A1" }};
 }
 
 /* --- Tables --- */
